--- a/app/src/main/res/layout/country_list_item.xml
+++ b/app/src/main/res/layout/country_list_item.xml
@@ -22,4 +22,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <!--todo remove area element-->
+    <TextView
+        android:textColor="#000"
+        tools:text="-1"
+        android:layout_marginTop="10dp"
+        android:id="@+id/area_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </LinearLayout>
