--- a/app/src/main/res/layout/country_list_item.xml
+++ b/app/src/main/res/layout/country_list_item.xml
@@ -25,7 +25,7 @@
     <!--todo remove area element-->
     <TextView
         android:textColor="#000"
-        tools:text="-1"
+        android:text="FFFFFFFFFFF"
         android:layout_marginTop="10dp"
         android:id="@+id/area_tv"
         android:layout_width="wrap_content"
